--- a/MyOrganizer/MyOrganizer.csproj
+++ b/MyOrganizer/MyOrganizer.csproj
@@ -280,6 +280,7 @@
     <Content Include="App\Controllers\homeController.js" />
     <Content Include="App\Controllers\loginController.js" />
     <Content Include="App\Controllers\meetingController.js" />
+    <Content Include="App\Controllers\singleAddressBookController.js" />
     <Content Include="App\Controllers\taskController.js" />
     <Content Include="App\Controllers\testController.js" />
     <Content Include="App\Views\addressBook.html" />
