--- a/MyOrganizer/MyOrganizer.csproj
+++ b/MyOrganizer/MyOrganizer.csproj
@@ -268,11 +268,19 @@
     <Compile Include="Migrations\201712200137337_AddCreateTaskModel.Designer.cs">
       <DependentUpon>201712200137337_AddCreateTaskModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712280003094_JsonIgnoreUserInModels.cs" />
+    <Compile Include="Migrations\201712280003094_JsonIgnoreUserInModels.Designer.cs">
+      <DependentUpon>201712280003094_JsonIgnoreUserInModels.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712280122076_CreatMeetingModel.cs" />
+    <Compile Include="Migrations\201712280122076_CreatMeetingModel.Designer.cs">
+      <DependentUpon>201712280122076_CreatMeetingModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CreateTask.cs" />
-    <Compile Include="Models\CreatMeeting.cs" />
+    <Compile Include="Models\CreateMeeting.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
@@ -282,6 +290,7 @@
   <ItemGroup>
     <Content Include="App\app.js" />
     <Content Include="App\appConfig.js" />
+    <Content Include="App\Controllers\addNewMeetingController.js" />
     <Content Include="App\Controllers\addNewTaskController.js" />
     <Content Include="App\Controllers\addressBookController.js" />
     <Content Include="App\Controllers\editAddressBookController.js" />
@@ -290,6 +299,7 @@
     <Content Include="App\Controllers\loginController.js" />
     <Content Include="App\Controllers\meetingController.js" />
     <Content Include="App\Controllers\singleAddressBookController.js" />
+    <Content Include="App\Controllers\singleMeetingController.js" />
     <Content Include="App\Controllers\singleTaskController.js" />
     <Content Include="App\Controllers\taskController.js" />
     <Content Include="App\Controllers\testController.js" />
@@ -300,8 +310,10 @@
     <Content Include="App\Views\login.html" />
     <Content Include="App\Views\meeting.html" />
     <Content Include="App\Views\newAddress.html" />
+    <Content Include="App\Views\newMeeting.html" />
     <Content Include="App\Views\newTask.html" />
     <Content Include="App\Views\singleAddress.html" />
+    <Content Include="App\Views\singleMeeting.html" />
     <Content Include="App\Views\singleTask.html" />
     <Content Include="App\Views\task.html" />
     <Content Include="App\Views\test.html" />
@@ -412,6 +424,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712200137337_AddCreateTaskModel.resx">
       <DependentUpon>201712200137337_AddCreateTaskModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712280003094_JsonIgnoreUserInModels.resx">
+      <DependentUpon>201712280003094_JsonIgnoreUserInModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712280122076_CreatMeetingModel.resx">
+      <DependentUpon>201712280122076_CreatMeetingModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
