--- a/MyOrganizer/MyOrganizer.csproj
+++ b/MyOrganizer/MyOrganizer.csproj
@@ -294,6 +294,7 @@
     <Content Include="App\Controllers\addNewTaskController.js" />
     <Content Include="App\Controllers\addressBookController.js" />
     <Content Include="App\Controllers\editAddressBookController.js" />
+    <Content Include="App\Controllers\editMeetingController.js" />
     <Content Include="App\Controllers\editTaskController.js" />
     <Content Include="App\Controllers\homeController.js" />
     <Content Include="App\Controllers\loginController.js" />
@@ -305,6 +306,7 @@
     <Content Include="App\Controllers\testController.js" />
     <Content Include="App\Views\addressBook.html" />
     <Content Include="App\Views\editAddress.html" />
+    <Content Include="App\Views\editMeeting.html" />
     <Content Include="App\Views\editTask.html" />
     <Content Include="App\Views\home.html" />
     <Content Include="App\Views\login.html" />
