--- a/MyOrganizer/MyOrganizer.csproj
+++ b/MyOrganizer/MyOrganizer.csproj
@@ -338,6 +338,15 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Picture\92584c1b6f4274d.jpg" />
+    <Content Include="Picture\ABList.jpg" />
+    <Content Include="Picture\AbList2.jpg" />
+    <Content Include="Picture\AbList3.jpg" />
+    <Content Include="Picture\AbLogo.jpg" />
+    <Content Include="Picture\ABNewEdit.jpg" />
+    <Content Include="Picture\Click-Modify.png" />
+    <Content Include="Picture\images %282%29.jpg" />
+    <Content Include="Picture\tooopen_sy_172947953111.jpg" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
